--- a/src/main/resources/org/example/onlinechessgame/controllers/ChessBoard.fxml
+++ b/src/main/resources/org/example/onlinechessgame/controllers/ChessBoard.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.onlinechessgame.controllers.ChessBoardController">
+<GridPane fx:id="gridPane" maxHeight="800.0" maxWidth="800.0" minHeight="800.0" minWidth="800.0" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.onlinechessgame.controllers.ChessBoardController">
   <columnConstraints>
   </columnConstraints>
   <rowConstraints>
