--- a/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
+++ b/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
@@ -1,27 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.onlinechessgame.controllers.ChessBoardController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1300.0" style="-fx-background-color: #302e2b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.onlinechessgame.controllers.ChessBoardController">
    <children>
-      <GridPane fx:id="gridPane" layoutX="30.0" layoutY="80.0" prefHeight="800.0" prefWidth="800.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="77.0" layoutY="15.0" prefHeight="17.0" prefWidth="95.0" text="opponent" />
-      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="40.0" layoutY="900.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="87.0" layoutY="900.0" prefHeight="17.0" prefWidth="95.0" text="opponent" />
-      <Button layoutX="1017.0" layoutY="247.0" mnemonicParsing="false" onAction="#matching" text="Button" />
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1300.0">
+         <children>
+            <GridPane fx:id="gridPane" layoutX="30.0" layoutY="81.0" prefHeight="800.0" prefWidth="800.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+            </GridPane>
+            <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Images/black_400.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="namePlayer2Label" layoutX="77.0" layoutY="13.0" prefHeight="17.0" prefWidth="95.0" text="player2" textFill="WHITE">
+               <font>
+                  <Font name="Segoe UI Black" size="15.0" />
+               </font></Label>
+            <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="40.0" layoutY="900.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Images/white_400.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="namePlayer1Label" layoutX="87.0" layoutY="898.0" prefHeight="17.0" prefWidth="95.0" text="player1" textFill="WHITE">
+               <font>
+                  <Font name="Segoe UI Black" size="15.0" />
+               </font></Label>
+            <HBox alignment="CENTER_RIGHT" layoutX="689.0" layoutY="15.0" prefHeight="39.0" prefWidth="152.0" style="-fx-background-color: #262421;">
+               <children>
+                  <Label text="10:00" textFill="WHITE">
+                     <font>
+                        <Font name="Segoe UI Black" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" layoutX="689.0" layoutY="900.0" prefHeight="39.0" prefWidth="152.0" style="-fx-background-color: white;">
+               <children>
+                  <Label text="10:00">
+                     <font>
+                        <Font name="Segoe UI Black" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <Pane layoutX="861.0" layoutY="184.0" prefHeight="593.0" prefWidth="418.0" style="-fx-background-color: #262522; -fx-background-radius: 10px;">
+               <children>
+                  <VBox prefHeight="593.0" prefWidth="418.0">
+                     <children>
+                        <TextArea disable="true" editable="false" prefHeight="272.0" prefWidth="418.0" styleClass="text-area" stylesheets="@../style/style.css" />
+                        <HBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="418.0" style="-fx-border-color: #cecece; -fx-border-radius: 15px;">
+                           <children>
+                              <TextField prefHeight="57.0" prefWidth="366.0" promptText="Write a message..." style="-fx-background-color: transparent; -fx-pref-width: 393px;" styleClass="TextField" stylesheets="@../style/style.css">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </TextField>
+                              <Button mnemonicParsing="false" style="-fx-background-color: transparent;" stylesheets="@../style/style.css">
+                                 <graphic>
+                                    <ImageView fitHeight="38.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../Images/Sent.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </Button>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
+      <Pane fx:id="resultPane" layoutX="468.0" layoutY="343.0" prefHeight="265.0" prefWidth="364.0" style="-fx-background-radius: 15px; -fx-background-color: #262421; -fx-border-color: white; -fx-border-width: 2px; -fx-border-radius: 15px;" visible="false">
+         <children>
+            <Label fx:id="winnerLabel" layoutX="125.0" layoutY="52.0" prefHeight="17.0" prefWidth="114.0" text="Player Won" textFill="WHITE">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Button layoutX="112.0" layoutY="133.0" mnemonicParsing="false" onAction="#rematch" prefHeight="25.0" prefWidth="140.0" text="Rematch" />
+            <Button layoutX="112.0" layoutY="191.0" mnemonicParsing="false" onAction="#close" prefHeight="25.0" prefWidth="140.0" text="Main menu" />
+         </children>
+      </Pane>
+      <Pane fx:id="waitingPane" layoutX="479.0" layoutY="378.0" prefHeight="194.0" prefWidth="342.0" style="-fx-background-color: green; -fx-border-radius: 20px; -fx-border-width: 2px; -fx-border-color: black; -fx-background-radius: 25px;" visible="false">
+         <children>
+            <Label layoutX="61.0" layoutY="14.0" prefHeight="26.0" prefWidth="190.0" text="Wait for player...">
+               <font>
+                  <Font name="Arial Bold" size="22.0" />
+               </font>
+            </Label>
+            <ProgressBar layoutX="56.0" layoutY="58.0" prefWidth="200.0" progress="0.0" />
+            <Label layoutX="112.0" layoutY="92.0" prefHeight="17.0" prefWidth="62.0" text="00:00:20">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Button layoutX="117.0" layoutY="118.0" mnemonicParsing="false" onAction="#cancelRematch" text="Cancel" />
+         </children>
+      </Pane>
    </children>
 </Pane>
