Update UI & Features
Add resign, draw, countdown, profile, ...

--- a/src/main/resources/org/example/onlinechessgame/controllers/home.fxml
+++ b/src/main/resources/org/example/onlinechessgame/controllers/home.fxml
@@ -33,20 +33,20 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Pane fx:id="waitingPane" layoutX="133.0" layoutY="196.0" prefHeight="183.0" prefWidth="356.0" style="-fx-background-color: green; -fx-border-radius: 20px; -fx-border-width: 2px; -fx-border-color: black; -fx-background-radius: 25px;" visible="false">
+            <Pane fx:id="waitingPane" layoutX="132.0" layoutY="202.0" prefHeight="183.0" prefWidth="356.0" style="-fx-background-color: green; -fx-border-radius: 20px; -fx-border-width: 2px; -fx-border-color: black; -fx-background-radius: 25px;" visible="false">
                <children>
-                  <Label layoutX="78.0" layoutY="14.0" prefHeight="30.0" prefWidth="200.0" text="Wait for player...">
+                  <Label layoutX="78.0" layoutY="14.0" prefHeight="30.0" prefWidth="200.0" text="Wait for player..." textFill="WHITE">
                      <font>
                         <Font name="Arial Bold" size="25.0" />
                      </font>
                   </Label>
-                  <ProgressBar layoutX="77.0" layoutY="60.0" prefWidth="200.0" progress="0.0" />
-                  <Label layoutX="140.0" layoutY="86.0" prefHeight="17.0" prefWidth="62.0" text="00:00:30">
+                  <ProgressBar fx:id="progressBar" layoutX="77.0" layoutY="60.0" prefWidth="200.0" progress="0.0" />
+                  <Label fx:id="timerLabel" layoutX="116.0" layoutY="78.0" prefHeight="39.0" prefWidth="125.0" text="00:00:20" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="15.0" />
+                        <Font name="System Bold" size="27.0" />
                      </font>
                   </Label>
-                  <Button layoutX="119.0" layoutY="115.0" mnemonicParsing="false" onAction="#cancelMatching" prefHeight="46.0" prefWidth="104.0" style="-fx-background-radius: 5px; -fx-background-color: transparent; -fx-border-color: #302e2b; -fx-border-radius: 8px; -fx-border-width: 2px;" text="Cancel" textFill="WHITE">
+                  <Button layoutX="119.0" layoutY="115.0" mnemonicParsing="false" onAction="#cancelMatching" prefHeight="46.0" prefWidth="104.0" style="-fx-background-radius: 5px; -fx-background-color: transparent; -fx-border-color: #302e2b; -fx-border-radius: 8px; -fx-border-width: 2px;" stylesheets="@../style/style.css" text="Cancel" textFill="WHITE">
                      <font>
                         <Font size="23.0" />
                      </font></Button>
@@ -79,6 +79,9 @@
                <VBox.margin>
                   <Insets left="10.0" top="10.0" />
                </VBox.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </ImageView>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="100.0" style="-fx-border-width: 1px 0px 1px 0px;" styleClass="Hbox" stylesheets="@../style/style.css">
                <children>
@@ -97,7 +100,7 @@
             <HBox alignment="CENTER_RIGHT" prefHeight="50.0" styleClass="Hbox" stylesheets="@../style/style.css">
                <children>
                   <Label prefHeight="30.0" prefWidth="104.0" text="Username:" />
-                  <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="460.0" text="player Username">
+                  <Label fx:id="userUsernameLabel" alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="460.0" text="player Username">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin></Label>
@@ -105,8 +108,8 @@
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="50.0" styleClass="Hbox" stylesheets="@../style/style.css">
                <children>
-                  <Label prefHeight="30.0" prefWidth="78.0" text="Country" />
-                  <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="487.0" text="player country">
+                  <Label prefHeight="30.0" prefWidth="78.0" text="Email" />
+                  <Label fx:id="userEmailLabel" alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="487.0" text="player Email">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin></Label>
@@ -115,7 +118,7 @@
             <HBox alignment="CENTER_RIGHT" prefHeight="50.0" styleClass="Hbox" stylesheets="@../style/style.css">
                <children>
                   <Label prefHeight="30.0" prefWidth="66.0" text="Point" />
-                  <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="497.0" text="player point">
+                  <Label fx:id="userPointLabel" alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="497.0" text="player point">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin></Label>
