--- a/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
+++ b/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
@@ -19,7 +19,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1300.0" style="-fx-background-color: #302e2b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.onlinechessgame.controllers.ChessBoardController">
    <children>
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1300.0">
+      <Pane layoutX="-6.0" layoutY="8.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1300.0">
          <children>
             <GridPane fx:id="gridPane" layoutX="30.0" layoutY="81.0" prefHeight="800.0" prefWidth="800.0">
                <columnConstraints>
@@ -47,9 +47,9 @@
                <font>
                   <Font name="Segoe UI Black" size="15.0" />
                </font></Label>
-            <HBox alignment="CENTER_RIGHT" layoutX="689.0" layoutY="15.0" prefHeight="39.0" prefWidth="152.0" style="-fx-background-color: #262421;">
+            <HBox fx:id="player2Hbox" alignment="CENTER_RIGHT" layoutX="689.0" layoutY="15.0" prefHeight="39.0" prefWidth="152.0" style="-fx-background-color: #262421;">
                <children>
-                  <Label text="10:00" textFill="WHITE">
+                  <Label fx:id="player2TimerLabel" text="10:00" textFill="WHITE">
                      <font>
                         <Font name="Segoe UI Black" size="22.0" />
                      </font>
@@ -59,9 +59,9 @@
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" layoutX="689.0" layoutY="900.0" prefHeight="39.0" prefWidth="152.0" style="-fx-background-color: white;">
+            <HBox fx:id="player1Hbox" alignment="CENTER_RIGHT" layoutX="689.0" layoutY="893.0" prefHeight="39.0" prefWidth="152.0" style="-fx-background-color: white;">
                <children>
-                  <Label text="10:00">
+                  <Label fx:id="player1TimerLabel" text="10:00">
                      <font>
                         <Font name="Segoe UI Black" size="22.0" />
                      </font>
@@ -75,10 +75,13 @@
                <children>
                   <VBox prefHeight="593.0" prefWidth="418.0">
                      <children>
-                        <TextArea disable="true" editable="false" prefHeight="272.0" prefWidth="418.0" styleClass="text-area" stylesheets="@../style/style.css" />
+                        <TextArea fx:id="chatTextArea" editable="false" focusTraversable="false" prefHeight="272.0" prefWidth="418.0" styleClass="text-area" stylesheets="@../style/style.css">
+                           <font>
+                              <Font size="15.0" />
+                           </font></TextArea>
                         <HBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="418.0" style="-fx-border-color: #cecece; -fx-border-radius: 15px;">
                            <children>
-                              <TextField prefHeight="57.0" prefWidth="366.0" promptText="Write a message..." style="-fx-background-color: transparent; -fx-pref-width: 393px;" styleClass="TextField" stylesheets="@../style/style.css">
+                              <TextField fx:id="chatTextField" prefHeight="57.0" prefWidth="366.0" promptText="Write a message..." style="-fx-background-color: transparent; -fx-pref-width: 393px;" styleClass="TextField" stylesheets="@../style/style.css">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
@@ -86,7 +89,10 @@
                                     <Insets />
                                  </HBox.margin>
                               </TextField>
-                              <Button mnemonicParsing="false" style="-fx-background-color: transparent;" stylesheets="@../style/style.css">
+                              <Button mnemonicParsing="false" onAction="#sendMessage" style="-fx-background-color: transparent;" stylesheets="@../style/style.css">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                                  <graphic>
                                     <ImageView fitHeight="38.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -94,13 +100,47 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                              </Button>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox prefHeight="21.0" prefWidth="418.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#sendDraw" style="-fx-background-color: transparent;" stylesheets="@../style/style.css" text="Draw" textFill="WHITE">
+                                 <graphic>
+                                    <ImageView fitHeight="32.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../Images/draw.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font name="Segoe UI Bold" size="24.0" />
+                                 </font>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </Button>
+                              <Button mnemonicParsing="false" onAction="#resign" style="-fx-background-color: transparent;" stylesheets="@../style/style.css" text="Resign" textFill="WHITE">
+                                 <graphic>
+                                    <ImageView fitHeight="32.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../Images/resign.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font name="Segoe UI Bold" size="24.0" />
+                                 </font>
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
                                  </cursor>
                               </Button>
                            </children>
                            <VBox.margin>
-                              <Insets top="20.0" />
+                              <Insets top="215.0" />
                            </VBox.margin>
                         </HBox>
                      </children>
@@ -122,18 +162,18 @@
       </Pane>
       <Pane fx:id="waitingPane" layoutX="479.0" layoutY="378.0" prefHeight="194.0" prefWidth="342.0" style="-fx-background-color: green; -fx-border-radius: 20px; -fx-border-width: 2px; -fx-border-color: black; -fx-background-radius: 25px;" visible="false">
          <children>
-            <Label layoutX="61.0" layoutY="14.0" prefHeight="26.0" prefWidth="190.0" text="Wait for player...">
+            <Label layoutX="76.0" layoutY="25.0" prefHeight="26.0" prefWidth="190.0" text="Wait for player...">
                <font>
                   <Font name="Arial Bold" size="22.0" />
                </font>
             </Label>
-            <ProgressBar layoutX="56.0" layoutY="58.0" prefWidth="200.0" progress="0.0" />
-            <Label layoutX="112.0" layoutY="92.0" prefHeight="17.0" prefWidth="62.0" text="00:00:20">
+            <ProgressBar fx:id="progressBar" layoutX="71.0" layoutY="72.0" prefWidth="200.0" progress="0.0" />
+            <Label fx:id="timerLabel" layoutX="125.0" layoutY="97.0" prefHeight="17.0" prefWidth="62.0" text="00:00:20">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Button layoutX="117.0" layoutY="118.0" mnemonicParsing="false" onAction="#cancelRematch" text="Cancel" />
+            <Button layoutX="130.0" layoutY="128.0" mnemonicParsing="false" onAction="#cancelRematch" text="Cancel" />
          </children>
       </Pane>
    </children>
