--- a/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
+++ b/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
@@ -21,7 +21,7 @@
    <children>
       <Pane layoutX="-6.0" layoutY="8.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="950.0" prefWidth="1300.0">
          <children>
-            <GridPane fx:id="gridPane" layoutX="30.0" layoutY="81.0" prefHeight="800.0" prefWidth="800.0">
+            <GridPane fx:id="gridPane" layoutX="40.0" layoutY="75.0" prefHeight="800.0" prefWidth="800.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
                </columnConstraints>
@@ -71,11 +71,17 @@
                   </Label>
                </children>
             </HBox>
-            <Pane layoutX="861.0" layoutY="184.0" prefHeight="593.0" prefWidth="418.0" style="-fx-background-color: #262522; -fx-background-radius: 10px;">
+            <Pane layoutX="861.0" layoutY="18.0" prefHeight="871.0" prefWidth="418.0" style="-fx-background-color: #262522; -fx-background-radius: 10px;">
                <children>
-                  <VBox prefHeight="593.0" prefWidth="418.0">
+                  <VBox fx:id="capturedPiecesBlackVbox" prefHeight="60.0" prefWidth="240.0">
                      <children>
-                        <TextArea fx:id="chatTextArea" editable="false" focusTraversable="false" prefHeight="272.0" prefWidth="418.0" styleClass="text-area" stylesheets="@../style/style.css">
+                        <HBox fx:id="blackRow1" prefHeight="100.0" prefWidth="200.0" />
+                        <HBox fx:id="blackRow2" prefHeight="100.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+                  <VBox layoutY="114.0" prefHeight="645.0" prefWidth="418.0">
+                     <children>
+                        <TextArea fx:id="chatTextArea" editable="false" focusTraversable="false" prefHeight="228.0" prefWidth="418.0" styleClass="text-area" stylesheets="@../style/style.css">
                            <font>
                               <Font size="15.0" />
                            </font></TextArea>
@@ -140,9 +146,15 @@
                               </Button>
                            </children>
                            <VBox.margin>
-                              <Insets top="215.0" />
+                              <Insets top="120.0" />
                            </VBox.margin>
                         </HBox>
+                     </children>
+                  </VBox>
+                  <VBox fx:id="capturedPiecesWhiteVbox" layoutY="759.0" prefHeight="60.0" prefWidth="240.0">
+                     <children>
+                        <HBox fx:id="whiteRow1" prefHeight="100.0" prefWidth="200.0" />
+                        <HBox fx:id="whiteRow2" prefHeight="100.0" prefWidth="200.0" />
                      </children>
                   </VBox>
                </children>
