--- a/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
+++ b/src/main/resources/org/example/onlinechessgame/controllers/UI.fxml
@@ -34,16 +34,16 @@
                   <Image url="@../Images/black_400.png" />
                </image>
             </ImageView>
-            <Label fx:id="namePlayer2Label" layoutX="77.0" layoutY="13.0" prefHeight="17.0" prefWidth="95.0" text="player2" textFill="WHITE">
+            <Label fx:id="namePlayer2Label" layoutX="77.0" layoutY="13.0" prefHeight="21.0" prefWidth="144.0" text="player2" textFill="WHITE">
                <font>
                   <Font name="Segoe UI Black" size="15.0" />
                </font></Label>
-            <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="40.0" layoutY="900.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="30.0" layoutY="900.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Images/white_400.png" />
                </image>
             </ImageView>
-            <Label fx:id="namePlayer1Label" layoutX="87.0" layoutY="898.0" prefHeight="17.0" prefWidth="95.0" text="player1" textFill="WHITE">
+            <Label fx:id="namePlayer1Label" layoutX="77.0" layoutY="898.0" prefHeight="21.0" prefWidth="183.0" text="player1" textFill="WHITE">
                <font>
                   <Font name="Segoe UI Black" size="15.0" />
                </font></Label>
@@ -159,6 +159,16 @@
                   </VBox>
                </children>
             </Pane>
+            <Label fx:id="pointPlayer2Label" layoutX="77.0" layoutY="35.0" text="Point" textFill="WHITE">
+               <font>
+                  <Font name="Segoe UI Black" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="pointPlayer1Label" layoutX="77.0" layoutY="920.0" text="Point" textFill="WHITE">
+               <font>
+                  <Font name="Segoe UI Black" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <Pane fx:id="resultPane" layoutX="468.0" layoutY="343.0" prefHeight="265.0" prefWidth="364.0" style="-fx-background-radius: 15px; -fx-background-color: #262421; -fx-border-color: white; -fx-border-width: 2px; -fx-border-radius: 15px;" visible="false">
