--- a/src/main/resources/org/example/onlinechessgame/controllers/home.fxml
+++ b/src/main/resources/org/example/onlinechessgame/controllers/home.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -125,7 +126,7 @@
                      </HBox.margin></Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="50.0" styleClass="Hbox" stylesheets="@../style/style.css">
+            <HBox alignment="CENTER_LEFT" onMouseClicked="#showHistoryPane" prefHeight="50.0" styleClass="Hbox" stylesheets="@../style/style.css">
                <children>
                   <Label prefHeight="17.0" prefWidth="270.0" text="History">
                      <padding>
@@ -163,5 +164,21 @@
             </HBox>
          </children>
       </VBox>
+      <Pane fx:id="historyPane" prefHeight="450.0" prefWidth="600.0" visible="false">
+         <children>
+            <ImageView fitHeight="48.0" fitWidth="60.0" layoutX="10.0" layoutY="10.0" onMouseClicked="#backToHome" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Images/Left.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+            <ScrollPane fx:id="historyScrollPane" layoutY="62.0" prefHeight="389.0" prefWidth="600.0" stylesheets="@../style/style.css">
+               <content>
+                  <VBox fx:id="containerHistoryItemVbox" prefHeight="389.0" prefWidth="600.0" spacing="10.0" styleClass="historyVbox" stylesheets="@../style/style.css" />
+               </content></ScrollPane>
+         </children>
+      </Pane>
    </children>
 </Pane>
