--- a/src/main/resources/org/example/onlinechessgame/style/style.css
+++ b/src/main/resources/org/example/onlinechessgame/style/style.css
@@ -69,3 +69,28 @@
 .log-out:pressed{
     -fx-text-fill: black;
 }
+.scroll-pane{
+    -fx-opacity: 1;
+    -fx-background-color: #302e2b;
+    -fx-padding: 0px;
+    -fx-border-width: 0px;
+    -fx-hbar-policy: never;
+}
+.scroll-pane .scroll-bar:vertical,
+.scroll-pane .scroll-bar:horizontal,
+.scroll-pane .scroll-bar:vertical .increment-button,
+.scroll-pane .scroll-bar:vertical .decrement-button,
+.scroll-pane .scroll-bar:horizontal .increment-button,
+.scroll-pane .scroll-bar:horizontal .decrement-button{
+    -fx-background-color: transparent;
+}
+
+.scroll-pane *{
+    -fx-opacity: 1;
+}
+.historyVbox{
+    -fx-background-color: #302e2b;
+    -fx-padding: 10px;
+    -fx-spacing: 10px;
+    -fx-opacity: 1;
+}
